cm4all-beng-proxy (0.7.6) unstable; urgency=low

  * istream-hold: return -2 if handler is not available yet

 --

cm4all-beng-proxy (0.7.5) unstable; urgency=low

  * session: 64 bit session ids
  * session: allow arbitrary session id size (at compile-time)
  * debian: larger default log file (16 * 4MB)
  * debian: added package cm4all-beng-proxy-toi

 -- Max Kellermann <mk@cm4all.com>  Mon, 16 Nov 2009 15:51:24 +0100

cm4all-beng-proxy (0.7.4) unstable; urgency=low

  * measure the latency of external resources
  * widget-http: partially revert "don't query session if !stateful"

 -- Max Kellermann <mk@cm4all.com>  Tue, 10 Nov 2009 15:06:03 +0100

cm4all-beng-proxy (0.7.3) unstable; urgency=low

  * uri-verify: don't reject double slash after first segment
  * hostname: allow the hyphen character
  * processor: allow processing without session
  * widget-http: don't query session if !stateful
  * request: disable session management for known bots
  * python: fixed AttributeError in __getattr__()
  * python: added method Response.process()
  * translation: added the response packets URI, HOST, SCHEME
  * translation: added header forward packets

 -- Max Kellermann <mk@cm4all.com>  Mon, 09 Nov 2009 16:40:27 +0100

cm4all-beng-proxy (0.7.2) unstable; urgency=low

  * fcache: close all caching connections on exit
  * istream-file: retry reading after EAGAIN
  * direct, istream-pipe: re-enable SPLICE_F_NONBLOCK
  * direct, istream-pipe: disable the SPLICE_F_MORE flag
  * http-client: handle EAGAIN after splice
  * http-client, header-writer: remove hop-by-hop response headers
  * response: optimized transformed response headers
  * handler: mangle CGI and FastCGI headers
  * header-forward: generate the X-Forwarded-For header
  * header-forward: add local host name to "Via" request header

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Oct 2009 13:41:02 +0100

cm4all-beng-proxy (0.7.1) unstable; urgency=low

  * file-handler: close the stream on "304 Not Modified"