@@ -118,7 +118,9 @@ http_request(pool_t pool,
     if (hr->headers == NULL)
         hr->headers = growing_buffer_new(pool, 512);
 
-    hr->body = body;
+    hr->body = body != NULL
+        ? istream_hold_new(pool, body)
+        : NULL;
 
     http_response_handler_set(&hr->handler, handler, handler_ctx);
     hr->async_ref = async_ref;
