@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.6) unstable; urgency=low
 
   * istream-hold: return -2 if handler is not available yet
+  * http, ajp, fcgi: use istream_hold on request body
 
  --
 
